test/Fail/Issue2858-codata.err
Issue2858-codata.agda:14.5-21: error: [Syntax.AmbiguousConstructor]
Could not find a matching data signature for constructor suc
There was no candidate.
